词形还原初步

--- a/title.ipynb
+++ b/title.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-12T08:48:11.599363Z",
-     "start_time": "2023-11-12T08:48:11.207844Z"
+     "end_time": "2023-11-13T15:03:38.316302Z",
+     "start_time": "2023-11-13T15:03:38.292482Z"
     }
    },
    "outputs": [],
@@ -19,7 +19,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('football', 'NN'), ('is', 'VBZ'), ('a', 'DT'), ('family', 'NN'), ('of', 'IN'), ('team', 'NN'), ('sports', 'NNS'), ('that', 'WDT'), ('involve', 'VBP'), (',', ','), ('to', 'TO'), ('varying', 'VBG'), ('degrees', 'NNS'), (',', ','), ('kicking', 'VBG'), ('a', 'DT'), ('ball', 'NN'), ('to', 'TO'), ('score', 'VB'), ('a', 'DT'), ('goal', 'NN'), ('like', 'IN'), ('likely', 'RB'), ('.', '.')]\n",
+      "[('football', 'NN'), ('is', 'VBZ'), ('family', 'NN'), ('team', 'NN'), ('sports', 'NNS'), ('that', 'WDT'), ('involve', 'VBP'), (',', ','), ('to', 'TO'), ('varying', 'VBG'), ('degrees', 'NNS'), (',', ','), ('kicking', 'VBG'), ('ball', 'NN'), ('to', 'TO'), ('score', 'VB'), ('goal', 'NN'), ('likely', 'RB'), ('.', '.')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nltk import word_tokenize, pos_tag\n",
+    "from nltk.corpus import wordnet\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "\n",
+    "# 获取单词的词性\n",
+    "def get_wordnet_pos(tag):\n",
+    "    if tag.startswith('J'):\n",
+    "        return wordnet.ADJ\n",
+    "    elif tag.startswith('V'):\n",
+    "        return wordnet.VERB\n",
+    "    elif tag.startswith('N'):\n",
+    "        return wordnet.NOUN\n",
+    "    elif tag.startswith('R'):\n",
+    "        return wordnet.ADV\n",
+    "    else:\n",
+    "        return None\n",
+    "\n",
+    "def clean_by_pos(tagged_words):\n",
+    "    cleaned_tagged_word = []\n",
+    "    exclude_tag = [\"CC\", \"CD\", \"DT\", \"FW\", \"IN\", \"MD\", \"POS\", \"PRP\", \"RP\", \"SYM\"]\n",
+    "    for tagged_word in tagged_words:\n",
+    "        if tagged_word[1] not in exclude_tag:\n",
+    "            cleaned_tagged_word.append(tagged_word)\n",
+    "    return cleaned_tagged_word\n",
+    "\n",
+    "\n",
+    "sentence = 'football is a family of team sports that involve, to varying degrees, kicking a ball to score a goal like likely .'\n",
+    "tokens = word_tokenize(sentence)  # 分词\n",
+    "tagged_sent = pos_tag(tokens)     # 获取单词词性\n",
+    "\n",
+    "# wnl = WordNetLemmatizer()\n",
+    "# lemmas_sent = []\n",
+    "# for tag in tagged_sent:\n",
+    "#     wordnet_pos = get_wordnet_pos(tag[1]) or wordnet.NOUN\n",
+    "#     lemmas_sent.append(wnl.lemmatize(tag[0], pos=wordnet_pos)) # 词形还原\n",
+    "# \n",
+    "# print(lemmas_sent)\n",
+    "print(tagged_sent)\n",
+    "tagged_sent = clean_by_pos(tagged_sent)\n",
+    "print(tagged_sent)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-13T16:47:44.623570Z",
+     "start_time": "2023-11-13T16:47:44.594259Z"
+    }
+   },
+   "id": "d26a16f9028b6397"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Document: I love playing soccer with my friends.\n",
+      "    friends : 0.35829137488557944\n",
+      "    my : 0.35829137488557944\n",
+      "    with : 0.4711101009983051\n",
+      "    soccer : 0.2782452148327134\n",
+      "    playing : 0.4711101009983051\n",
+      "    love : 0.4711101009983051\n",
+      "Document: Soccer is a popular sport around the world.\n",
+      "    world : 0.3968745408286403\n",
+      "    the : 0.3968745408286403\n",
+      "    around : 0.3968745408286403\n",
+      "    sport : 0.3968745408286403\n",
+      "    popular : 0.3968745408286403\n",
+      "    is : 0.3968745408286403\n",
+      "    soccer : 0.23440049712476196\n",
+      "Document: My friends and I often watch soccer matches together.\n",
+      "    together : 0.3920626253314354\n",
+      "    matches : 0.3920626253314354\n",
+      "    watch : 0.3920626253314354\n",
+      "    often : 0.3920626253314354\n",
+      "    and : 0.3920626253314354\n",
+      "    friends : 0.298173732156414\n",
+      "    my : 0.298173732156414\n",
+      "    soccer : 0.23155850231624595\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "\n",
+    "# Text data\n",
+    "documents = [\n",
+    "    \"I love playing soccer with my friends.\",\n",
+    "    \"Soccer is a popular sport around the world.\",\n",
+    "    \"My friends and I often watch soccer matches together.\"\n",
+    "]\n",
+    "\n",
+    "# Create TF-IDF vectorizer\n",
+    "vectorizer = TfidfVectorizer()\n",
+    "\n",
+    "# Vectorize the text data\n",
+    "tfidf_matrix = vectorizer.fit_transform(documents)\n",
+    "\n",
+    "# Get feature names\n",
+    "features = vectorizer.get_feature_names_out()\n",
+    "\n",
+    "# Print keywords and their corresponding TF-IDF values\n",
+    "for i, doc in enumerate(documents):\n",
+    "    print(\"Document:\", doc)\n",
+    "    for j, feature_idx in enumerate(tfidf_matrix[i].indices):\n",
+    "        tfidf_value = tfidf_matrix[i, feature_idx]\n",
+    "        print(\"   \", features[feature_idx], \":\", tfidf_value)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-13T15:27:38.573180Z",
+     "start_time": "2023-11-13T15:27:38.562497Z"
+    }
+   },
+   "id": "47f85adb37785346"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stderr",
@@ -27,7 +161,13 @@
      "text": [
       "[nltk_data] Downloading package stopwords to\n",
       "[nltk_data]     /Users/dingyi/nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n"
+      "[nltk_data]   Package stopwords is already up-to-date!\n",
+      "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
+      "[nltk_data]     /Users/dingyi/nltk_data...\n",
+      "[nltk_data] Error downloading 'averaged_perceptron_tagger' from\n",
+      "[nltk_data]     <https://raw.githubusercontent.com/nltk/nltk_data/gh-p\n",
+      "[nltk_data]     ages/packages/taggers/averaged_perceptron_tagger.zip>:\n",
+      "[nltk_data]     <urlopen error [Errno 61] Connection refused>\n"
      ]
     }
    ],
@@ -35,16 +175,88 @@
     "import nltk\n",
     "nltk.download('stopwords')\n",
     "from nltk.corpus import stopwords\n",
-    "from collections import Counter"
+    "from collections import Counter\n",
+    "from nltk.stem import PorterStemmer"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-12T08:48:14.427411Z",
-     "start_time": "2023-11-12T08:48:13.066790Z"
+     "end_time": "2023-11-13T13:24:17.813351Z",
+     "start_time": "2023-11-13T13:24:17.775917Z"
     }
    },
    "id": "657dbef4588e0210"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
+      "[nltk_data]     /Users/dingyi/nltk_data...\n",
+      "[nltk_data] Error downloading 'averaged_perceptron_tagger' from\n",
+      "[nltk_data]     <https://raw.githubusercontent.com/nltk/nltk_data/gh-p\n",
+      "[nltk_data]     ages/packages/taggers/averaged_perceptron_tagger.zip>:\n",
+      "[nltk_data]     <urlopen error [Errno 61] Connection refused>\n"
+     ]
+    },
+    {
+     "ename": "LookupError",
+     "evalue": "\n**********************************************************************\n  Resource \u001B[93maveraged_perceptron_tagger\u001B[0m not found.\n  Please use the NLTK Downloader to obtain the resource:\n\n  \u001B[31m>>> import nltk\n  >>> nltk.download('averaged_perceptron_tagger')\n  \u001B[0m\n  For more information see: https://www.nltk.org/data.html\n\n  Attempted to load \u001B[93mtaggers/averaged_perceptron_tagger/averaged_perceptron_tagger.pickle\u001B[0m\n\n  Searched in:\n    - '/Users/dingyi/nltk_data'\n    - '/Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.9/nltk_data'\n    - '/Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.9/share/nltk_data'\n    - '/Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.9/lib/nltk_data'\n    - '/usr/share/nltk_data'\n    - '/usr/local/share/nltk_data'\n    - '/usr/lib/nltk_data'\n    - '/usr/local/lib/nltk_data'\n**********************************************************************\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mLookupError\u001B[0m                               Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[4], line 9\u001B[0m\n\u001B[1;32m      6\u001B[0m tokens \u001B[38;5;241m=\u001B[39m nltk\u001B[38;5;241m.\u001B[39mword_tokenize(text)\n\u001B[1;32m      8\u001B[0m \u001B[38;5;66;03m# 词性标注\u001B[39;00m\n\u001B[0;32m----> 9\u001B[0m pos_tags \u001B[38;5;241m=\u001B[39m \u001B[43mnltk\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mpos_tag\u001B[49m\u001B[43m(\u001B[49m\u001B[43mtokens\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     11\u001B[0m \u001B[38;5;66;03m# 使用正则表达式定义短语的语法规则\u001B[39;00m\n\u001B[1;32m     12\u001B[0m grammar \u001B[38;5;241m=\u001B[39m \u001B[38;5;124mr\u001B[39m\u001B[38;5;124m\"\"\"\u001B[39m\n\u001B[1;32m     13\u001B[0m \u001B[38;5;124m    NP: \u001B[39m\u001B[38;5;124m{\u001B[39m\u001B[38;5;124m<DT|JJ|NN.*>+} # 名词短语\u001B[39m\n\u001B[1;32m     14\u001B[0m \u001B[38;5;124m    PP: \u001B[39m\u001B[38;5;124m{\u001B[39m\u001B[38;5;124m<IN><NP>} # 介词短语\u001B[39m\n\u001B[1;32m     15\u001B[0m \u001B[38;5;124m    VP: \u001B[39m\u001B[38;5;124m{\u001B[39m\u001B[38;5;124m<VB.*><NP|PP|CLAUSE>+$} # 动词短语\u001B[39m\n\u001B[1;32m     16\u001B[0m \u001B[38;5;124m    CLAUSE: \u001B[39m\u001B[38;5;124m{\u001B[39m\u001B[38;5;124m<NP><VP>} # 主语和谓语组成的子句\u001B[39m\n\u001B[1;32m     17\u001B[0m \u001B[38;5;124m\"\"\"\u001B[39m\n",
+      "File \u001B[0;32m/Library/Python/3.9/site-packages/nltk/tag/__init__.py:165\u001B[0m, in \u001B[0;36mpos_tag\u001B[0;34m(tokens, tagset, lang)\u001B[0m\n\u001B[1;32m    140\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mpos_tag\u001B[39m(tokens, tagset\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mNone\u001B[39;00m, lang\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124meng\u001B[39m\u001B[38;5;124m\"\u001B[39m):\n\u001B[1;32m    141\u001B[0m \u001B[38;5;250m    \u001B[39m\u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[1;32m    142\u001B[0m \u001B[38;5;124;03m    Use NLTK's currently recommended part of speech tagger to\u001B[39;00m\n\u001B[1;32m    143\u001B[0m \u001B[38;5;124;03m    tag the given list of tokens.\u001B[39;00m\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m    163\u001B[0m \u001B[38;5;124;03m    :rtype: list(tuple(str, str))\u001B[39;00m\n\u001B[1;32m    164\u001B[0m \u001B[38;5;124;03m    \"\"\"\u001B[39;00m\n\u001B[0;32m--> 165\u001B[0m     tagger \u001B[38;5;241m=\u001B[39m \u001B[43m_get_tagger\u001B[49m\u001B[43m(\u001B[49m\u001B[43mlang\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    166\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m _pos_tag(tokens, tagset, tagger, lang)\n",
+      "File \u001B[0;32m/Library/Python/3.9/site-packages/nltk/tag/__init__.py:107\u001B[0m, in \u001B[0;36m_get_tagger\u001B[0;34m(lang)\u001B[0m\n\u001B[1;32m    105\u001B[0m     tagger\u001B[38;5;241m.\u001B[39mload(ap_russian_model_loc)\n\u001B[1;32m    106\u001B[0m \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[0;32m--> 107\u001B[0m     tagger \u001B[38;5;241m=\u001B[39m \u001B[43mPerceptronTagger\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    108\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m tagger\n",
+      "File \u001B[0;32m/Library/Python/3.9/site-packages/nltk/tag/perceptron.py:167\u001B[0m, in \u001B[0;36mPerceptronTagger.__init__\u001B[0;34m(self, load)\u001B[0m\n\u001B[1;32m    164\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mclasses \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mset\u001B[39m()\n\u001B[1;32m    165\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m load:\n\u001B[1;32m    166\u001B[0m     AP_MODEL_LOC \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mfile:\u001B[39m\u001B[38;5;124m\"\u001B[39m \u001B[38;5;241m+\u001B[39m \u001B[38;5;28mstr\u001B[39m(\n\u001B[0;32m--> 167\u001B[0m         \u001B[43mfind\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mtaggers/averaged_perceptron_tagger/\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m \u001B[49m\u001B[38;5;241;43m+\u001B[39;49m\u001B[43m \u001B[49m\u001B[43mPICKLE\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    168\u001B[0m     )\n\u001B[1;32m    169\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mload(AP_MODEL_LOC)\n",
+      "File \u001B[0;32m/Library/Python/3.9/site-packages/nltk/data.py:583\u001B[0m, in \u001B[0;36mfind\u001B[0;34m(resource_name, paths)\u001B[0m\n\u001B[1;32m    581\u001B[0m sep \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m*\u001B[39m\u001B[38;5;124m\"\u001B[39m \u001B[38;5;241m*\u001B[39m \u001B[38;5;241m70\u001B[39m\n\u001B[1;32m    582\u001B[0m resource_not_found \u001B[38;5;241m=\u001B[39m \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;130;01m\\n\u001B[39;00m\u001B[38;5;132;01m{\u001B[39;00msep\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;130;01m\\n\u001B[39;00m\u001B[38;5;132;01m{\u001B[39;00mmsg\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;130;01m\\n\u001B[39;00m\u001B[38;5;132;01m{\u001B[39;00msep\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;130;01m\\n\u001B[39;00m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m--> 583\u001B[0m \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mLookupError\u001B[39;00m(resource_not_found)\n",
+      "\u001B[0;31mLookupError\u001B[0m: \n**********************************************************************\n  Resource \u001B[93maveraged_perceptron_tagger\u001B[0m not found.\n  Please use the NLTK Downloader to obtain the resource:\n\n  \u001B[31m>>> import nltk\n  >>> nltk.download('averaged_perceptron_tagger')\n  \u001B[0m\n  For more information see: https://www.nltk.org/data.html\n\n  Attempted to load \u001B[93mtaggers/averaged_perceptron_tagger/averaged_perceptron_tagger.pickle\u001B[0m\n\n  Searched in:\n    - '/Users/dingyi/nltk_data'\n    - '/Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.9/nltk_data'\n    - '/Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.9/share/nltk_data'\n    - '/Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.9/lib/nltk_data'\n    - '/usr/share/nltk_data'\n    - '/usr/local/share/nltk_data'\n    - '/usr/lib/nltk_data'\n    - '/usr/local/lib/nltk_data'\n**********************************************************************\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 输入句子\n",
+    "text = \"I love to play soccer with my friends.\"\n",
+    "\n",
+    "# 分词\n",
+    "tokens = nltk.word_tokenize(text)\n",
+    "\n",
+    "# 词性标注\n",
+    "pos_tags = nltk.pos_tag(tokens)\n",
+    "\n",
+    "# 使用正则表达式定义短语的语法规则\n",
+    "grammar = r\"\"\"\n",
+    "    NP: {<DT|JJ|NN.*>+} # 名词短语\n",
+    "    PP: {<IN><NP>} # 介词短语\n",
+    "    VP: {<VB.*><NP|PP|CLAUSE>+$} # 动词短语\n",
+    "    CLAUSE: {<NP><VP>} # 主语和谓语组成的子句\n",
+    "\"\"\"\n",
+    "\n",
+    "# 创建ChunkParser\n",
+    "chunk_parser = nltk.RegexpParser(grammar)\n",
+    "\n",
+    "# 应用短语抽取规则\n",
+    "result = chunk_parser.parse(pos_tags)\n",
+    "\n",
+    "# 遍历抽取结果，获取短语和词组\n",
+    "for subtree in result.subtrees():\n",
+    "    if subtree.label() in ['NP', 'PP', 'VP', 'CLAUSE']:\n",
+    "        phrase = \" \".join(word for word, tag in subtree.leaves())\n",
+    "        print(phrase)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-13T13:23:50.037997Z",
+     "start_time": "2023-11-13T13:23:49.966024Z"
+    }
+   },
+   "id": "1f444e95e9018d1e"
   },
   {
    "cell_type": "code",
