--- a/title.ipynb
+++ b/title.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-13T15:03:38.316302Z",
-     "start_time": "2023-11-13T15:03:38.292482Z"
+     "end_time": "2023-11-14T03:07:20.582322Z",
+     "start_time": "2023-11-14T03:07:20.558234Z"
     }
    },
    "outputs": [],
@@ -16,6 +16,38 @@
     "import matplotlib.pyplot as plt \n",
     "%matplotlib inline"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import csv\n",
+    "\n",
+    "# 读取JSON文件\n",
+    "with open('output/output_nltk1.json', 'r') as json_file:\n",
+    "    data = json.load(json_file)\n",
+    "\n",
+    "# 创建CSV文件并写入数据\n",
+    "with open('output/output_nltk1.csv', 'w', newline='') as csv_file:\n",
+    "    writer = csv.writer(csv_file)\n",
+    "\n",
+    "    # 写入CSV文件的表头\n",
+    "    writer.writerow(['word', 'freq'])\n",
+    "\n",
+    "    # 写入JSON数据\n",
+    "    for item in data:\n",
+    "        writer.writerow([item[0], item[1]])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-14T03:08:26.351702Z",
+     "start_time": "2023-11-14T03:08:26.321598Z"
+    }
+   },
+   "id": "3bcaf1f67fc0c328"
   },
   {
    "cell_type": "code",
