增加停用词

--- a/LDA.ipynb
+++ b/LDA.ipynb
@@ -295,32 +295,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Topic #1:\n",
-      "['file', 'use', 'cybersecurity', 'attack', 'data', 'threat', 'clinic', 'actor', 'victim', 'group']\n",
+      "['use']\n",
       "Topic #2:\n",
-      "['security', 'use', 'attack', 'company', 'file', 'data', 'threat', 'malicious', 'software', 'vulnerability']\n",
+      "['use']\n",
       "Topic #3:\n",
-      "['attack', 'vulnerability', 'security', 'update', 'device', 'file', 'Windows', 'exploit', 'threat', 'code']\n",
+      "['vulnerability']\n",
       "Topic #4:\n",
-      "['malware', 'use', 'attack', 'company', 'threat', 'attacker', 'malicious', 'target', 'actor', 'user']\n",
+      "['data']\n",
       "Topic #5:\n",
-      "['data', 'use', 'Snake', 'command', 'attack', 'file', 'key', 'security', 'implant', 'network']\n",
+      "['company']\n",
       "Topic #6:\n",
-      "['attack', 'group', 'operation', 'ransomware', 'threat', 'report', 'target', 'use', 'data', 'cybersecurity']\n",
+      "['data']\n",
       "Topic #7:\n",
-      "['data', 'user', 'access', 'account', 'use', 'password', 'security', 'company', 'Google', 'threat']\n",
+      "['file']\n",
       "Topic #8:\n",
-      "['use', 'malware', 'threat', 'file', 'target', 'new', 'attack', 'group', 'malicious', 'actor']\n",
+      "['data']\n",
       "Topic #9:\n",
-      "['security', 'device', 'AI', 'attack', 'risk', 'report', 'vulnerability', 'threat', 'user', 'authorization']\n",
+      "['data']\n",
       "Topic #10:\n",
-      "['use', 'file', 'malware', 'code', 'device', 'data', 'attacker', 'malicious', 'command', 'target']\n"
+      "['use']\n"
      ]
     }
    ],
@@ -338,15 +338,15 @@
     "# 输出每个主题的关键词\n",
     "for topic_id in range(num_topics):\n",
     "    print(f\"Topic #{topic_id + 1}:\")\n",
-    "    topic_keywords = lda_model.show_topic(topic_id, topn=10)\n",
+    "    topic_keywords = lda_model.show_topic(topic_id, topn=1)\n",
     "    keywords = [word for word, _ in topic_keywords]\n",
     "    print(keywords)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-24T12:51:22.267929Z",
-     "start_time": "2023-11-24T12:51:15.413114Z"
+     "end_time": "2023-11-25T06:25:17.279649Z",
+     "start_time": "2023-11-25T06:25:10.360513Z"
     }
    },
    "id": "bc5832f121c4555e"
