--- a/TFIDF.ipynb
+++ b/TFIDF.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 46,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-24T10:33:58.849286Z",
-     "start_time": "2023-11-24T10:33:58.821875Z"
+     "end_time": "2023-11-25T07:21:57.132980Z",
+     "start_time": "2023-11-25T07:21:57.127745Z"
     }
    },
    "outputs": [
@@ -40,26 +40,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     /Users/dingyi/nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total amount of data is 358\n",
-      "start nlkt process\n"
-     ]
-    }
-   ],
+   "execution_count": 47,
+   "outputs": [],
    "source": [
     "def tokenize(text):\n",
     "    token_list = nltk.word_tokenize(text)\n",
@@ -88,7 +70,7 @@
     "# 根据词性清理词汇\n",
     "def clean_by_pos(tagged_words):\n",
     "    cleaned_tagged_word = []\n",
-    "    include_tag = [\"EX\", \"JJ\", \"JJR\", \"JJS\", \"NN\", \"NNS\", \"NNP\", \"NNPS\", \"PDT\", \"RB\", \"RBR\", \"RBS\", \"UH\", \"VB\", \"VBD\",\"VBN\", \"VBP\", \"VBZ\", \"NP\", \"PP\", \"VP\", \"ADJP\", \"ADVP\", \"PNP\", \"-SBJ\", \"-OBJ\"]\n",
+    "    include_tag = [\"EX\", \"JJ\", \"JJR\", \"JJS\", \"NN\", \"NNS\", \"NNP\", \"NNPS\", \"PDT\", \"RB\", \"RBR\", \"RBS\", \"UH\", \"NP\", \"PP\", \"VP\", \"ADJP\", \"ADVP\", \"PNP\", \"-SBJ\", \"-OBJ\"]\n",
     "    for tagged_word in tagged_words:\n",
     "        if tagged_word[1] in include_tag:\n",
     "            cleaned_tagged_word.append(tagged_word)\n",
@@ -116,7 +98,7 @@
     "        stopwords_list = f.read().split('\\n')\n",
     "        stopwords_security_list.extend(stopwords_list)\n",
     "    with open(\"other_file/info_security_stopwords.txt\", \"r\") as s:\n",
-    "        info_security_list = s.read().split(', ')\n",
+    "        info_security_list = s.read().split('\\n')\n",
     "        stopwords_security_list.extend(info_security_list)\n",
     "    stopwords_security = set(stopwords_security_list)\n",
     "    return stopwords_security\n",
@@ -158,48 +140,77 @@
     "    word_dict = dict(keyword_counter)\n",
     "    sorted_data = sorted(word_dict.items(), key=lambda x: x[1], reverse=True)\n",
     "    # 只输出前120个高频词\n",
-    "    with open('output/output_nltk_' + year + '_' + format_month(start_month)\n",
-    "              + '_' + format_month(end_month) + '.json', 'w', encoding='utf-8') as f:\n",
-    "        json.dump(sorted_data[:200], f, indent=4, ensure_ascii=False)\n",
-    "\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "\n",
-    "    year = '2023'\n",
-    "    start_month = 10\n",
-    "    end_month = 11\n",
-    "\n",
-    "    data = load_data(year, start_month, end_month)\n",
-    "    keyword_list = []\n",
-    "    stopword_list = load_security_words()\n",
-    "    sent = []\n",
-    "\n",
-    "    print(\"start nlkt process\")\n",
-    "    for i, content in enumerate(data):\n",
-    "        word_list = tokenize(content)\n",
-    "        word_list_cleaned = remove_stopwords(stopword_list, word_list)\n",
-    "        sent.append(word_list_cleaned)\n",
-    "        keyword_list.extend(word_list_cleaned)\n",
-    "    keyword_counter = Counter(keyword_list)"
+    "    with open('output/nltk_output/output_nltk_' + year + '_' + format_month(start_month)\n",
+    "              + '_' + format_month(end_month) + '_' + 'nation' + '.json', 'w', encoding='utf-8') as f:\n",
+    "        json.dump(sorted_data, f, indent=4, ensure_ascii=False)\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-24T10:34:06.727591Z",
-     "start_time": "2023-11-24T10:33:58.831375Z"
+     "end_time": "2023-11-25T07:21:57.151189Z",
+     "start_time": "2023-11-25T07:21:57.145052Z"
     }
    },
    "id": "32a0e42c5fa4559b"
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 48,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     /Users/dingyi/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total amount of data is 358\n",
+      "start nlkt process\n"
+     ]
+    }
+   ],
+   "source": [
+    "year = '2023'\n",
+    "start_month = 10\n",
+    "end_month =11\n",
+    "\n",
+    "data = load_data(year, start_month, end_month)\n",
+    "keyword_list = []\n",
+    "stopword_list = load_security_words()\n",
+    "sent = []\n",
+    "\n",
+    "print(\"start nlkt process\")\n",
+    "for i, content in enumerate(data):\n",
+    "    word_list = tokenize(content)\n",
+    "    word_list_cleaned = remove_stopwords(stopword_list, word_list)\n",
+    "    sent.append(word_list_cleaned)\n",
+    "    keyword_list.extend(word_list_cleaned)\n",
+    "keyword_counter = Counter(keyword_list)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-25T07:22:07.122825Z",
+     "start_time": "2023-11-25T07:21:57.150957Z"
+    }
+   },
+   "id": "8c9c26bab89865a5"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "outputs": [
     {
      "data": {
       "text/plain": "<Text: UAE Bolsters Cyber Future Treasury Partnership Collaborations.The United...>"
      },
-     "execution_count": 52,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,15 +222,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-24T10:34:06.735644Z",
-     "start_time": "2023-11-24T10:34:06.732524Z"
+     "end_time": "2023-11-25T07:22:07.142927Z",
+     "start_time": "2023-11-25T07:22:07.126639Z"
     }
    },
    "id": "72e9f43aea5586c5"
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 50,
    "outputs": [],
    "source": [
     "word_dict = dict(keyword_counter)\n",
@@ -238,8 +249,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-24T10:34:28.066156Z",
-     "start_time": "2023-11-24T10:34:06.743581Z"
+     "end_time": "2023-11-25T07:22:26.728812Z",
+     "start_time": "2023-11-25T07:22:07.142421Z"
     }
    },
    "id": "c3353b0b6addd2ec"
