ADD nation analysis

--- a/word_cloud.ipynb
+++ b/word_cloud.ipynb
@@ -15,35 +15,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-24T11:45:41.274669800Z",
-     "start_time": "2023-11-24T11:45:41.266547800Z"
+     "end_time": "2023-11-25T05:03:59.238731900Z",
+     "start_time": "2023-11-25T05:03:59.224989900Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print('https' in 'https://fdsafadsfas')"
+    "import stylecloud\n",
+    "import json\n",
+    "import csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "outputs": [],
-   "source": [],
+   "source": [
+    "# #读取JSON文件\n",
+    "# with open('output/output_nltk1.json', 'r') as json_file:\n",
+    "#     data = json.load(json_file)\n",
+    "# \n",
+    "# # 创建CSV文件并写入数据\n",
+    "# with open('output/output_nltk1.csv', 'w', newline='') as csv_file:\n",
+    "#     writer = csv.writer(csv_file)\n",
+    "# \n",
+    "#     # 写入CSV文件的表头\n",
+    "#     writer.writerow(['word', 'freq'])\n",
+    "# \n",
+    "#     # 写入JSON数据\n",
+    "#     for item in data:\n",
+    "#         writer.writerow([item[0], item[1]])"
+   ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-25T05:03:59.239729900Z",
+     "start_time": "2023-11-25T05:03:59.230912800Z"
+    }
+   },
+   "id": "7ba14d927bddc89c"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [],
+   "source": [
+    "stylecloud.gen_stylecloud(file_path='output/TF_IDF/output_2023_season4.csv',\n",
+    "                          icon_name='fas fa-shield-alt',\n",
+    "                          # icon_name='fas fa-bug',\n",
+    "                          colors='white',\n",
+    "                          background_color='black',\n",
+    "                          output_name='output/wordCloud/season4_shield.png',\n",
+    "                          collocations=False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-25T05:04:01.064820900Z",
+     "start_time": "2023-11-25T05:03:59.232530400Z"
+    }
    },
    "id": "f88169a9918ee8ea"
   }
