--- a/output/analysis_nations/visualization_nations.ipynb
+++ b/output/analysis_nations/visualization_nations.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-25T09:18:01.234849900Z",
-     "start_time": "2023-11-25T09:18:01.234343600Z"
+     "end_time": "2023-11-25T09:20:08.626009900Z",
+     "start_time": "2023-11-25T09:20:07.835410800Z"
     }
    },
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
@@ -31,21 +31,51 @@
     }
    ],
    "source": [
-    "color_list = ['#45AAB4', '#206491', '#FEAAC2', '#FBB45C', '#F9637C', '#D6594C', '#81D0BB', '#FE7966']\n",
+    "color_list = ['#FCB002', '#614099', '#1663A9', '#92C2DD', '#757C6A', '#B9181A', '#8B6A84', '#6571A3']\n",
     "country_list = ['Ukraine', 'Russia', 'UK', 'India', 'Cambodia', 'China', 'Poland', 'Germany']\n",
+    "marker_list = ['o', 's', 'v', '^', '+', '*', '+', '+']\n",
     "\n",
     "df = pd.read_csv('2022-2023 TOP 8 NATIONS.csv',sep=',', header=None)\n",
     "df.columns = ['Term', 'Country', 'Value']\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize = (16, 9))\n",
+    "\n",
+    "for i, country in enumerate(country_list):\n",
+    "   df_country = df[df['Country'] == country]\n",
+    "   ax.plot(df_country['Term'], df_country['Value'], label=country, color = color_list[i]\n",
+    "            , marker=marker_list[i])\n",
+    "\n",
+    "ax.set_title('Frequency change chart of national words in the fifth quarter', fontsize = 26)\n",
+    "ax.set_xlabel('Terms', fontsize = 20)\n",
+    "ax.set_ylabel('Counts', fontsize = 20)\n",
+    "\n",
+    "# 显示图形\n",
+    "plt.xticks(size=15)\n",
+    "plt.yticks(size=15)\n",
+    "plt.tight_layout()\n",
+    "# 添加图例\n",
+    "plt.legend(fontsize=15)\n",
+    "plt.show()\n",
     "\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-25T09:18:01.390073400Z",
-     "start_time": "2023-11-25T09:18:01.234849900Z"
+     "end_time": "2023-11-25T09:20:10.437477200Z",
+     "start_time": "2023-11-25T09:20:10.205573200Z"
     }
    },
    "id": "a57a09d0b707a9e6"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "db755fdc32764bb9"
   }
  ],
  "metadata": {
